--- a/thesis/src/app/views/home/home.component.html
+++ b/thesis/src/app/views/home/home.component.html
@@ -111,84 +111,84 @@
         </div>
     </div>
 </div>
-    <div class="pricing-2">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-6 ml-auto mr-auto text-center">
-                    <h2 class="title">Pick the best plan for you</h2>
-                    
+<div class="pricing-2">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6 ml-auto mr-auto text-center">
+                <h2 class="title">Pick the best plan for you</h2>
+                
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-4">
+                <div class="card card-pricing card-plain">
+                    <div class="card-body">
+                        <h6 class="category">BASIC</h6>
+                        <h1 class="card-title">
+                            <small></small>300 DT</h1>
+                        <ul>
+                            <li>
+                                <b>10 POSTS</b></li>
+                            <li>
+                                <b>Video & Chat</b></li>
+                            <li>
+                                <b>Caendar</b></li>
+                            <li>
+                                <b>Unlimited</b> Candidats</li>
+                        </ul>
+                        <a href="#pablo" class="btn btn-primary btn-round" (click)="onSubmitPayment()">
+                            Pay Now
+                        </a>
+                    </div>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-md-4">
-                    <div class="card card-pricing card-plain">
-                        <div class="card-body">
-                            <h6 class="category">Enterprise</h6>
-                            <h1 class="card-title">
-                                <small>DT</small>59</h1>
-                            <ul>
-                                <li>
-                                    <b>10GB</b> Disk Space</li>
-                                <li>
-                                    <b>100GB</b> Monthly Bandwidth</li>
-                                <li>
-                                    <b>20</b> Email Accounts</li>
-                                <li>
-                                    <b>Unlimited</b> subdomains</li>
-                            </ul>
-                            <a href="#pablo" class="btn btn-primary btn-round">
-                                Sign Up
-                            </a>
-                        </div>
+            <div class="col-md-4">
+                <div class="card card-pricing card-background card-raised" style="background-image: url('assets/img/pricing2.jpg')">
+                    <div class="card-body">
+                        <h6 class="category text-info">PREMIUM</h6>
+                        <h1 class="card-title">
+                            <small></small>1200 DT</h1>
+                        <ul>
+                            <li>
+                                <b>50 POSTS</b> </li>
+                            <li>
+                                <b>Video & Chat</b>  </li>
+                            <li>
+                                <b>Calendar</b> </li>
+                            <li>
+                                <b>Unlimited Candidats</b> </li>
+                        </ul>
+                        <a href="#pablo" class="btn btn-neutral btn-round" (click)="onSubmitPayment()">
+                            Pay Now
+                        </a>
                     </div>
                 </div>
-                <div class="col-md-4">
-                    <div class="card card-pricing card-background card-raised" style="background-image: url('assets/img/pricing2.jpg')">
-                        <div class="card-body">
-                            <h6 class="category text-info">Professional</h6>
-                            <h1 class="card-title">
-                                <small>DT</small>29</h1>
-                            <ul>
-                                <li>
-                                    <b>5GB</b> Disk Space</li>
-                                <li>
-                                    <b>50GB</b> Monthly Bandwidth</li>
-                                <li>
-                                    <b>10</b> Email Accounts</li>
-                                <li>
-                                    <b>Unlimited</b> subdomains</li>
-                            </ul>
-                            <a href="#pablo" class="btn btn-neutral btn-round">
-                                Sign Up
-                            </a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="card card-pricing card-plain">
-                        <div class="card-body">
-                            <h6 class="category">Standard</h6>
-                            <h1 class="card-title">
-                                <small>DT</small>17</h1>
-                            <ul>
-                                <li>
-                                    <b>2GB</b> Disk Space</li>
-                                <li>
-                                    <b>25GB</b> Monthly Bandwidth</li>
-                                <li>
-                                    <b>5</b> Email Accounts</li>
-                                <li>
-                                    <b>Unlimited</b> subdomains</li>
-                            </ul>
-                            <a href="#pablo" class="btn btn-primary btn-round">
-                                Get Started
-                            </a>
-                        </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card card-pricing card-plain">
+                    <div class="card-body">
+                        <h6 class="category">PRO</h6>
+                        <h1 class="card-title">
+                            <small></small>500 DT</h1>
+                        <ul>
+                            <li>
+                                <b>30 POSTS</b></li>
+                            <li>
+                                <b>Video & Chat</b> </li>
+                            <li>
+                                <b>Calendar</b> </li>
+                            <li>
+                                <b>Unlimited Candidats</b> </li>
+                        </ul>
+                        <a class="btn btn-primary btn-round" (click)="onSubmitPayment()">
+                            Pay Now
+                        </a>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+</div>
     <div class="section section-contact-us text-center">
         <div class="container">
             <h2 class="title">Want to work with us?</h2>
